<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/add_category_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:focusable="true"
        android:clickable="true"
        android:src="@drawable/close_black"
        android:background="@drawable/button_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/close_button" />

    <TextView
        android:id="@+id/add_new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_category"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/add_category_close"
        app:layout_constraintStart_toEndOf="@+id/add_category_close"
        app:layout_constraintBottom_toBottomOf="@+id/add_category_close"
        android:layout_marginStart="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/add_new_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_name_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_name_text_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>